--- a/src/AzureFunctions.Contrib.SignalR/AzureFunctions.Contrib.SignalR.csproj
+++ b/src/AzureFunctions.Contrib.SignalR/AzureFunctions.Contrib.SignalR.csproj
@@ -1,19 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <RootNamespace>AzureFunctions.Contrib.SignalR</RootNamespace>
+    <AssemblyName>AzureFunctions.Contrib.SignalR</AssemblyName>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>Azure Functions Redis</PackageTags>
+    <RepositoryUrl>https://github.com/AzureFunctionsContrib/AzureFunctions.Contrib.SignalR</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/AzureFunctionsContrib/AzureFunctions.Contrib.SignalR</PackageProjectUrl>
+    <Description>Azure SignalR bindings for Azure Functions</Description>
+    <Version>1.0.0-beta1</Version>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Authors>fbeltrao</Authors>
+    <Product>Azure Functions Contrib Extensions</Product>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.0-beta5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="host.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
   </ItemGroup>
 </Project>
